--- a/config/.env
+++ b/config/.env
@@ -5,6 +5,8 @@ MASTER_KEY=sk-1234567890abcdef1234567890abcdef
 UI_USERNAME=admin
 UI_PASSWORD=zeromind
 
+STORE_MODEL_IN_DB=true
+
 
 # AWS Profile to use (optional - will use 'default' if not set)
 AWS_PROFILE=BedrockAde
@@ -13,3 +15,19 @@ AWS_PROFILE=BedrockAde
 AWS_DEFAULT_REGION=us-east-1
 AWS_REGION_NAME=us-east-1
 
+# Optional: Database URL for tracking usage/stats
+DATABASE_URL=postgresql://litellm_user:litellm_pass@postgres:5432/litellm_db
+
+# Redis Configuration for Caching
+REDIS_HOST=redis
+REDIS_PORT=6379
+# Optional: REDIS_PASSWORD=your_redis_password_here
+
+# Z.AI API Configuration
+ZAI_API_KEY=your_zai_api_key_here
+
+ANTHROPIC_API_BASE=https://api.z.ai/api/anthropic
+# LITELLM_ANTHROPIC_DISABLE_URL_SUFFIX=true
+
+# GitHub Copilot API Configuration
+GITHUB_API_KEY=your_pat
