Update configuration files for GitHub Copilot integration and add proxy configuration

--- a/config/.env
+++ b/config/.env
@@ -31,3 +31,5 @@ ANTHROPIC_API_BASE=https://api.z.ai/api/anthropic
 
 # GitHub Copilot API Configuration
 GITHUB_API_KEY=your_pat
+
+GITHUB_COPILOT_TOKEN_DIR=/app/config/litellm/github_copilot
