Remove detailed debug option from litellm command in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     depends_on:
       - postgres
       - redis
-    command: ["--config", "/app/config/config.yaml", "--port", "4000", "--detailed_debug"]
+    command: ["--config", "/app/config/config.yaml", "--port", "4000"]
     restart: unless-stopped
 
   redis:
