--- a/config/config.yaml
+++ b/config/config.yaml
@@ -27,66 +27,6 @@ model_list:
     model_info:
       access_groups: ["aws-bedrock"]
 
-  # GitHub Copilot - OpenAI Models
-  - model_name: github-copilot:gpt-4.1
-    litellm_params:
-      model: github_copilot/gpt-4.1
-      extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
-    model_info:
-      access_groups: ["github-copilot"]
-
-  - model_name: github-copilot:gpt-5-mini
-    litellm_params:
-      model: github_copilot/gpt-5-mini
-      extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
-    model_info:
-      access_groups: ["github-copilot"]
-
-  - model_name: github-copilot:gpt-5.1
-    litellm_params:
-      model: github_copilot/gpt-5.1
-      extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
-    model_info:
-      access_groups: ["github-copilot"]
-
-  - model_name: github-copilot:gpt-5.1-codex
-    litellm_params:
-      model: github_copilot/gpt-5.1-codex
-      extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
-    model_info:
-      mode: responses
-      access_groups: ["github-copilot"]
-
-  - model_name: github-copilot:gpt-5.1-codex-mini
-    litellm_params:
-      model: github_copilot/gpt-5.1-codex-mini
-      extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
-    model_info:
-      access_groups: ["github-copilot"]
-
-  - model_name: github-copilot:gpt-5.1-codex-max
-    litellm_params:
-      model: github_copilot/gpt-5.1-codex-max
-      extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
-    model_info:
-      mode: responses
-      access_groups: ["github-copilot"]
-
-  - model_name: github-copilot:gpt-5.2
-    litellm_params:
-      model: github_copilot/gpt-5.2
-      extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
-    model_info:
-      access_groups: ["github-copilot"]
-
-  - model_name: github-copilot:gpt-5.2-codex
-    litellm_params:
-      model: github_copilot/gpt-5.2-codex
-      extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
-    model_info:
-      mode: responses
-      access_groups: ["github-copilot"]
-
   # GitHub Copilot - Anthropic Models
   - model_name: github-copilot:claude-haiku-4-5
     litellm_params:
@@ -94,13 +34,7 @@ model_list:
       extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
     model_info:
       access_groups: ["github-copilot"]
-    
-  - model_name: github-copilot:claude-opus-4-5
-    litellm_params:
-      model: github_copilot/claude-opus-4.5
-      extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
-    model_info:
-      access_groups: ["github-copilot"]
+      base_model: "claude-haiku-4-5-20251001"
 
   - model_name: github-copilot:claude-sonnet-4-5
     litellm_params:
@@ -108,37 +42,15 @@ model_list:
       extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
     model_info:
       access_groups: ["github-copilot"]
-  
-  # GitHub Copilot - Google Models
-  - model_name: github-copilot:gemini-3-flash
+      base_model: "claude-sonnet-4-5-20250929"
+    
+  - model_name: github-copilot:claude-opus-4-5
     litellm_params:
-      model: github_copilot/gemini-3-flash
+      model: github_copilot/claude-opus-4.5
       extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
     model_info:
       access_groups: ["github-copilot"]
-
-  - model_name: github-copilot:gemini-3-pro
-    litellm_params:
-      model: github_copilot/gemini-3-pro
-      extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
-    model_info:
-      access_groups: ["github-copilot"]
-
-  # GitHub Copilot - xAI Models
-  - model_name: github-copilot:grok-code-fast-1
-    litellm_params:
-      model: github_copilot/grok-code-fast-1
-      extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
-    model_info:
-      access_groups: ["github-copilot"]
-
-  # GitHub Copilot - Fine-tuned Models
-  - model_name: github-copilot:raptor-mini
-    litellm_params:
-      model: github_copilot/raptor-mini
-      extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
-    model_info:
-      access_groups: ["github-copilot"]
+      base_model: "claude-opus-4-5-20251101"
 
 # General settings
 general_settings:
