Add configuration files and scripts for GitHub Copilot profile management
- Create .env file for environment variables
- Update .gitignore to include GitHub Copilot directory
- Add COPILOT.md documentation for managing multiple profiles
- Enhance config.yaml with pricing and headers for GitHub Copilot models
- Implement authorize-profile.sh and switch-profile.sh scripts for profile management
- Create placeholder.txt for profile secrets
- Update docker-compose.yml to include copilot directory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
       - "4000:4000"
     volumes:
       - ./config:/app/config
+      - ./copilot:/app/copilot
       - ${HOME}/.aws:/root/.aws:ro
     env_file:
-      - ./config/.env
+      - .env
     environment:
       - LITELLM_CONFIG_FILE=/app/config/config.yaml
       - DATABASE_URL=postgresql://litellm_user:litellm_pass@postgres:5432/litellm_db
