--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,13 +1,34 @@
+# Common headers for GitHub Copilot models
+copilot_headers: &copilot_headers
+  editor-version: vscode/1.108.1
+  editor-plugin-version: copilot/1.388.0
+  Copilot-Integration-Id: vscode-chat
+  user-agent: GithubCopilot/1.388.0
+
+# Pricing anchors for Claude models
+haiku_pricing: &haiku_pricing
+  input_cost_per_token: 0.000001
+  output_cost_per_token: 0.000005
+
+sonnet_pricing: &sonnet_pricing
+  input_cost_per_token: 0.000003
+  output_cost_per_token: 0.000015
+
+opus_pricing: &opus_pricing
+  input_cost_per_token: 0.000005
+  output_cost_per_token: 0.000025
+
 model_list:
   # AWS Bedrock - Latest Claude models
-  - model_name: aws-bedrock:claude-opus-4-5
+  - model_name: aws-bedrock:claude-haiku-4-5
     litellm_params:
-      model: bedrock/us.anthropic.claude-opus-4-5-20251101-v1:0
+      model: bedrock/us.anthropic.claude-haiku-4-5-20251001-v1:0
       aws_region_name: os.environ/AWS_REGION_NAME
       api_base: https://bedrock-runtime.us-east-1.amazonaws.com
       # cache_prompt: True
     model_info:
       access_groups: ["aws-bedrock"]
+      <<: *haiku_pricing
 
   - model_name: aws-bedrock:claude-sonnet-4-5
     litellm_params:
@@ -17,46 +38,45 @@ model_list:
       # cache_prompt: True
     model_info:
       access_groups: ["aws-bedrock"]
+      <<: *sonnet_pricing
   
-  - model_name: aws-bedrock:claude-haiku-4-5
+  - model_name: aws-bedrock:claude-opus-4-5
     litellm_params:
-      model: bedrock/us.anthropic.claude-haiku-4-5-20251001-v1:0
+      model: bedrock/us.anthropic.claude-opus-4-5-20251101-v1:0
       aws_region_name: os.environ/AWS_REGION_NAME
       api_base: https://bedrock-runtime.us-east-1.amazonaws.com
       # cache_prompt: True
     model_info:
       access_groups: ["aws-bedrock"]
+      <<: *opus_pricing
 
   # GitHub Copilot - Anthropic Models
   - model_name: github-copilot:claude-haiku-4-5
     litellm_params:
       model: github_copilot/claude-haiku-4.5
-      extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
+      extra_headers: *copilot_headers
     model_info:
       access_groups: ["github-copilot"]
       base_model: "anthropic.claude-haiku-4-5-20251001-v1:0"
-      input_cost_per_token: 0.000001
-      output_cost_per_token: 0.000005
+      <<: *haiku_pricing
 
   - model_name: github-copilot:claude-sonnet-4-5
     litellm_params:
       model: github_copilot/claude-sonnet-4.5
-      extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
+      extra_headers: *copilot_headers
     model_info:
       access_groups: ["github-copilot"]
       base_model: "anthropic.claude-sonnet-4-5-20250929-v1:0"
-      input_cost_per_token: 0.000003
-      output_cost_per_token: 0.000015
+      <<: *sonnet_pricing
     
   - model_name: github-copilot:claude-opus-4-5
     litellm_params:
       model: github_copilot/claude-opus-4.5
-      extra_headers: {"editor-version": "vscode/1.108.1","editor-plugin-version": "copilot/1.388.0","Copilot-Integration-Id": "vscode-chat","user-agent": "GithubCopilot/1.388.0"}
+      extra_headers: *copilot_headers
     model_info:
       access_groups: ["github-copilot"]
       base_model: "anthropic.claude-opus-4-5-20251101-v1:0"
-      input_cost_per_token: 0.000005
-      output_cost_per_token: 0.000025
+      <<: *opus_pricing
 
   - model_name: za-i:glm-4.7
     litellm_params:
