--- a/copilot/config.yaml
+++ b/copilot/config.yaml
@@ -1,9 +1,10 @@
 model_list:
-
   # GitHub Copilot - OpenAI Models
   - model_name: github_copilot:gpt-4.1
     litellm_params:
       model: github_copilot/gpt-4.1
-      extra_headers: {"Editor-Version": "vscode/1.85.1", "Copilot-Integration-Id": "vscode-chat"}
+      extra_headers:
+        "Editor-Version": "vscode/1.85.1"
+        "Copilot-Integration-Id": "vscode-chat"
     model_info:
       access_groups: ["github-copilot"]
