Update COPILOT.md with specific profile name and comment out GitHub Copilot budget settings in config.yaml

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -124,9 +124,9 @@ router_settings:
     bedrock: 
       budget_limit: 10
       time_period: 1d
-    github_copilot: 
-      budget_limit: 3
-      time_period: 1d
+    # github_copilot: 
+    #   budget_limit: 3
+    #   time_period: 1d
 
 # General settings
 general_settings:
